# kaji-example-sdl

./: .gitmodules  CMakeLists.txt  makefile  readme.md
inc/: common.h
src/: common.c  main-cli.c  main-sdl.c
